@@ -63,10 +63,14 @@ static constexpr Item internal_polars[] = {
   { _T("Apis 2 (15m)"), 310, 0, 80, -0.60, 100, -0.75, 140, -1.45, 12.40, 0.0, 98, 215 }, // from LK8000
   // from Shempp Hirth
   { _T("Arcus"), 700, 185, 110, -0.64, 140, -0.88, 180, -1.47, 15.59, 50.0, 120, 430 },
+  { _T("Astir CS Jeans"), 330, 90, 80.0, -0.730, 95.0, -0.810, 150.0, -1.920, 12.40, 47.22, 96, 296 }, // from CondorUtil (condorutill.fr)
+  { _T("AS-33 Me (15m)"), 485, 139, 126.2, -0.700, 163.1, -1.050, 200.0, -1.670, 8.80, 55.56, 116, 320 }, // from CondorUtil (condorutill.fr)
+  { _T("AS-33 Me (18m)"), 495, 170, 116.2, -0.590, 158.1, -0.990, 200.0, -1.760, 10.00, 55.56, 122, 330 }, // from CondorUtil (condorutill.fr)
   { _T("ASG-29 (15m)"), 362, 165, 108.8, -0.635, 156.4, -1.182, 211.13, -2.540, 9.20, 0.0, 114, 270 },
   { _T("ASG-29 (18m)"), 355, 225, 85, -0.47, 90, -0.48, 185, -2.00, 10.5, 0.0, 121, 280 },
   { _T("ASG-29E (15m)"), 350, 200, 100, -0.64, 120, -0.75, 150, -1.13, 9.2, 0.0, 114, 315 },
   { _T("ASG-29E (18m)"), 400, 200, 90, -0.499, 95.5, -0.510, 196.4, -2.12, 10.5, 0.0, 121, 325 },
+  { _T("ASG-32 Mi"), 694, 120, 115.8, -0.620, 157.9, -1.080, 200.0, -2.000, 15.70, 50.0, 120, 545 }, // from Gliding Australia Polar10.xls (via Wayback Machine)
   { _T("ASH-25"), 750, 121, 130.01, -0.78, 169.96, -1.4, 219.94, -2.6, 16.31, 0.0, 122, 478 },
   { _T("ASH-26"), 340, 185, 100, -0.56, 120, -0.74, 150, -1.16, 11.7, 0.0, 119, 325 },
   { _T("ASH-26E"), 435, 90, 90, -0.51, 96, -0.53, 185, -2.00, 11.7, 0.0, 119, 360 },
@@ -86,10 +90,13 @@ static constexpr Item internal_polars[] = {
   { _T("ASW-27"), 365, 165, 88.8335, -0.5939, 130.0, -0.8511, 170.0, -1.6104, 9.0, 0.0, 114, 235 }, // from idaflieg 1997 & 2018
   { _T("ASW-28 (15m)"), 310, 200, 92.6, -0.571, 120.38, -0.875, 148.16, -1.394, 10.5, 55.555, 108, 235 }, // from SeeYou
   { _T("ASW-28 (18m)"), 345, 190, 65, -0.47, 107, -0.67, 165, -2.00, 10.5, 0.0, 114, 270 },
+  { _T("Bergfalke II"), 300, 0, 70.0, -0.910, 80.0, -0.960, 150.0, -3.420, 17.70, 33.33, 74, 243 }, // from Gliding Australia Polar10.xls (via Wayback Machine)
+  { _T("Bergfalke IV"), 350, 0, 75.0, -0.850, 90.0, -0.970, 150.0, -2.560, 17.88, 47.22, 80, 262 }, // from Gliding Australia Polar10.xls (via Wayback Machine)
   { _T("Blanik L13"), 472, 0, 85.0, -0.84, 143.0, -3.32, 200.0, -9.61, 19.1, 0.0, 78, 292 },
   // from factory polar (flight manual)
   { _T("Blanik L13-AC"), 500, 0, 70, -0.85, 110, -1.25, 160, -3.2, 17.44, 44.44, 78, 306 },
   { _T("Blanik L23"), 510, 0, 95.0, -0.94, 148.0, -2.60, 200.0, -6.37, 19.1, 0.0, 80, 310 },
+  { _T("Calif A-21S"), 500, 0, 80.0, -0.690, 120.0, -0.880, 150.0, -1.260, 16.19, 46.94, 108, 392 }, // from Gliding Australia Polar10.xls (via Wayback Machine)
   { _T("Carat"), 470, 0, 100, -0.83, 120, -1.04, 150, -1.69, 10.58, 0.0, 93, 341 },
   { _T("Cirrus (18m)"), 330, 100, 100, -0.74, 120, -1.06, 150, -1.88, 12.6, 0.0, 102, 260 },
   // Idaflieg measurement, 28.08.2015 at Aalen Elchingen
@@ -98,18 +105,24 @@ static constexpr Item internal_polars[] = {
   { _T("Delta USHPA-3"), 100, 0, 37, -0.95, 48.1,  -1.15,  73.0, -3.60,  0, 0.0, 0, 5 },
   { _T("Delta USHPA-4"), 100, 0, 37, -0.89, 48.3,  -1.02,  76.5, -3.30,  0, 0.0, 0, 5 },
   { _T("DG-100"), 300, 100, 100, -0.73, 120, -1.00, 150, -1.7, 11.0, 0.0, 100, 230 },
+  { _T("DG-101 G"), 315, 100, 90.2, -0.650, 145.1, -1.620, 200.0, -3.750, 11.0, 45.83, 100, 340 }, // from CondorUtil (condorutill.fr)
   { _T("DG-200"), 300, 120, 100, -0.68, 120, -0.86, 150, -1.3, 10.0, 0.0, 107, 230 },
   { _T("DG-300"), 310, 190, 95.0, -0.66, 140.0, -1.28, 160.0, -1.70, 10.27, 0.0, 104, 235 },
+  { _T("DG-303"), 310, 190, 80.0, -0.546, 95.0, -0.609, 150.0, -1.649, 10.27, 55.56, 104, 310 }, // from Gliding Australia Polar10.xls (via Wayback Machine)
   { _T("DG-400 (15m)"), 440, 90, 115, -0.76, 160.53, -1.22, 210.22, -2.3, 10.0, 0.0, 107, 306 },
   { _T("DG-400 (17m)"), 444, 90, 118.28, -0.68, 163.77, -1.15, 198.35, -1.8, 10.57, 0.0, 109, 310 },
   { _T("DG-500 (20m)"), 659, 100, 115.4, -0.71, 152.01, -1.28, 190.02, -2.3, 18.29, 0.0, 104, 390 },
   { _T("DG-600 (15m)"), 327, 180, 100, -0.60, 120, -0.76, 150, -1.19, 10.95, 0.0, 110, 255 },
+  { _T("DG-800 (18m) WL"), 472, 120, 106.0, -0.620, 171.8, -1.470, 214.8, -2.400, 11.81, 52.8, 119, 344 }, // from LK8000
   { _T("DG-800B (15m)"), 468, 100, 103.610, -0.6535, 130.0, -0.8915, 170.0, -1.4807, 10.68, 52.8, 113, 340 },
   { _T("DG-800B (18m)"), 472, 100, 90.0086, -0.5496, 130.0, -0.7920, 170.0, -1.4248, 11.81, 52.8, 119, 344 },
+  { _T("DG-808C (15m)"), 447, 156, 108.8, -0.640, 154.4, -1.130, 200.0, -2.060, 10.68, 52.8, 113, 340 }, // from Gliding Australia Polar10.xls (via Wayback Machine)
+  { _T("DG-808C (18m)"), 451, 156, 102.3, -0.560, 151.1, -1.100, 200.0, -2.180, 11.81, 52.8, 120, 340 }, // from CondorUtil (condorutill.fr)
   // as taken from handbook of DG-800S the pure glider variant
   { _T("DG-800S (15m)"), 370, 150, 92.1255, -0.5811, 130.0, -0.9754, 170.0, -1.6933, 10.68, 52.8, 113, 260 },
   { _T("DG-800S (18m)"), 350, 150, 77.5081, -0.4733, 130.0, -0.9257, 170.0, -1.7948, 11.81, 52.8, 119, 264 },
   { _T("DG-1000 (20m)"), 613, 160, 106.0, -0.62, 153.0, -1.53, 200.0, -3.2, 17.51, 0.0, 111, 415 },
+  { _T("Diamant (16.5m)"), 400, 150, 85.0, -0.600, 95.0, -0.650, 150.0, -1.640, 13.30, 45.83, 0, 302 },
   { _T("Dimona"), 670, 100, 100, -1.29, 120, -1.61, 150, -2.45, 15.3, 0.0, 68, 470 },
   { _T("Discus"), 350, 182, 95, -0.63, 140, -1.23, 180, -2.29, 10.58, 55.555, 107, 233 },
   { _T("Discus 2b"), 312, 200, 105, -0.66, 150, -1.05, 200, -2.0, 10.6, 0.0, 108, 252 },
@@ -119,6 +132,8 @@ static constexpr Item internal_polars[] = {
   { _T("Duo Discus xT"), 700, 50, 110, -0.664, 155, -1.206, 200, -2.287, 16.40, 50.0, 113, 445 },
   { _T("EB 28"), 670, 180, 100, -0.46, 120, -0.61, 150, -0.96, 16.8, 0.0, 125, 570 },
   { _T("EB 28 Edition"), 670, 180, 100, -0.47, 120, -0.63, 150, -0.97, 16.5, 0.0, 125, 570 },
+  { _T("EB 29 R"), 714, 174, 100.2, -0.400, 150.1, -0.770, 200.0, -1.500, 14.90, 50.0, 129, 350 }, // from Gliding Australia Polar10.xls (via Wayback Machine)
+  { _T("Elfe S4D"), 350, 100, 80.0, -0.690, 90.0, -0.720, 150.0, -1.890, 11.80, 41.67, 96, 270 }, // from Gliding Australia Polar10.xls (via Wayback Machine)
   { _T("G 102 Astir CS"), 330, 90, 75.0, -0.7, 93.0, -0.74, 185.00, -3.1, 12.40, 0.0, 96, 255 },
   // from factory polar (flight manual) by Christopher Schenk
   { _T("G 102 Club Astir IIIb"), 380, 0, 75.0, -0.6, 100.0, -0.70, 180.00, -3.1, 12.40, 0.0, 91, 255 },
@@ -127,10 +142,12 @@ static constexpr Item internal_polars[] = {
   { _T("G 104 Speed Astir"), 351, 90, 90, -0.63, 105, -0.72, 157, -2.00, 11.5, 0.0, 105, 265 },
   { _T("Genesis II"), 374, 151, 94, -0.61, 141.05, -1.18, 172.4, -2.0, 11.24, 0.0, 107, 240 },
   { _T("Glasfluegel 304"), 305, 145, 100, -0.78, 120, -0.97, 150, -1.43, 9.9, 0.0, 110, 235 },
+  { _T("Grunau Baby"), 240, 0, 60.5, -0.980, 95.2, -2.280, 130.0, -5.040, 14.20, 0.0, 54, 150 }, // from CondorUtil (condorutill.fr)
   { _T("H-201 Std Libelle"), 304, 50, 97, -0.79, 152.43, -1.91, 190.54, -3.3, 9.8, 41.666, 98, 185 },
   { _T("H-205 Club Libelle"), 295, 0, 100, -0.85, 120, -1.21, 150, -2.01, 9.8, 41.666, 96, 200 },
   { _T("H-301 Libelle"), 300, 50, 94, -0.68, 147.71, -2.03, 184.64, -4.1, 9.8, 41.666, 100, 180 },
   { _T("HPH 304CZ"), 310, 115, 115.03, -0.86, 174.04, -1.76, 212.72, -3.4, 0, 0.0, 110, 235 },
+  { _T("HPH 304 eS Shark"), 445, 200, 99.6, -0.550, 149.8, -1.100, 200.0, -2.230, 11.80, 50.0, 119, 280 }, // from CondorUtil (condorutill.fr)
   { _T("IS-28B2"), 590, 0, 100, -0.82, 160, -2.28, 200, -4.27, 18.24, 0.0, 84, 375 },
   { _T("IS-29D2 Lark"), 360, 0, 100, -0.82, 135.67, -1.55, 184.12, -3.3, 10.4, 0.0, 96, 240 },
   { _T("Janus (18m)"), 498, 240, 100, -0.71, 120, -0.92, 150, -1.46, 16.6, 0.0, 102, 405 },
@@ -146,10 +163,14 @@ static constexpr Item internal_polars[] = {
   { _T("Ka 6E"),  310, 0, 87.35, -0.81, 141.92, -2.03, 174.68, -3.5, 12.4, 0.0, 85, 185 }, // from idaflieg measured 1970
   { _T("Ka 7"), 445, 0, 87, -0.92, 120, -1.55, 150, -2.7, 17.5, 0.0, 78, 285 },
   { _T("Ka 8"), 290, 0, 74.1, -0.76, 101.9, -1.27, 166.7, -4.64, 14.15, 0.0, 76, 190 },
+  { _T("Ka 10"), 300, 0, 70.0, -0.700, 80.0, -0.730, 130.0, -1.930, 12.53, 0.0, 0, 245 }, // from Gliding Australia Polar10.xls (via Wayback Machine)
+  { _T("Kranich III"), 300, 0, 70.0, -0.800, 90.0, -0.950, 150.0, -3.040, 12.00, 36.11, 80, 242 }, // from Gliding Australia Polar10.xls (via Wayback Machine)
   { _T("L-33 Solo"), 330, 0, 87.2, -0.8, 135.64, -1.73, 174.4, -3.4, 11.0, 0.0, 86, 210 },
+  { _T("L-Spatz 55"), 300, 0, 70.0, -0.800, 75.0, -0.840, 105.0, -1.420, 10.9, 30.56, 78, 213 }, // from Gliding Australia Polar10.xls (via Wayback Machine)
   { _T("LAK-12"),  430, 190, 75, -0.48, 125, -0.88, 175, -1.97, 14.63, 48.611, 114, 360 }, // from marius@sargevicius.com
   { _T("LAK-17 (15m)"), 285, 215, 100, -0.60, 120, -0.72, 150, -1.09, 9.06, 0.0, 113, 220 },
   { _T("LAK-17 (18m)"), 295, 205, 100, -0.56, 120, -0.74, 150, -1.16, 9.8, 0.0, 119, 225 },
+  { _T("LAK-17a MINI  FES (13.5m) "), 325, 80, 105.9, -0.740, 153.0, -1.420, 200.0, -2.820, 8.41, 47.22, 103, 240 }, // from CondorUtil (condorutill.fr)
   { _T("LAK-17a (15m)"), 285, 180, 95, -0.574, 148, -1.310, 200, -2.885, 9.06, 0.0, 113, 220 },
   { _T("LAK-17a (18m)"), 298, 180, 115, -0.680, 158, -1.379, 200, -2.975, 9.80, 0.0, 119, 225 },
   { _T("LAK-19 (15m)"), 285, 195, 100, -0.64, 120, -0.85, 150, -1.41, 9.06, 0.0, 108, 220 },
@@ -195,6 +216,9 @@ static constexpr Item internal_polars[] = {
   { _T("R-26S Gobe"), 420, 0, 60.0, -1.02, 80.0, -0.96, 120.0, -2.11, 18.00, 30.5, 0, 230 },
   { _T("Russia AC-4"), 250, 0, 99.3, -0.92, 140.01, -1.8, 170.01, -2.9, 7.70, 0.0, 84, 140 },
   { _T("SF-27B"), 300, 0, 100, -0.81, 120, -1.27, 150, -2.50, 13, 0.0, 88, 220 },
+  { _T("SF-28"), 510, 0, 90.8, -1.010, 130.4, -1.850, 170.0, -3.490, 18.35, 43.33, 78, 200 }, // from CondorUtil (condorutill.fr)
+  { _T("SF-34"), 500, 0, 90.0, -0.830, 105.0, -0.900, 150.0, -1.800, 14.80, 47.78, 86, 361 }, // from Gliding Australia Polar10.xls (via Wayback Machine)
+  { _T("SG-38"), 200, 0, 62.0, -2.070, 81.0, -3.210, 100.0, -5.340, 16.00, 16.67, 0, 150 }, // from CondorUtil (condorutill.fr)
   { _T("SGS 1-26E"), 315, 0, 82.3, -1.04, 117.73, -1.88, 156.86, -3.8, 14.87, 0.0, 63, 202 },
   { _T("SGS 1-34"), 354, 0, 89.82, -0.8, 143.71, -2.1, 179.64, -3.8, 14.03, 0.0, 85, 259 },
   { _T("SGS 1-35A"), 381, 179, 98.68, -0.74, 151.82, -1.8, 202.87, -3.9, 9.64, 0.0, 0, 180 },
@@ -202,13 +226,17 @@ static constexpr Item internal_polars[] = {
   { _T("SGS 2-33"), 472, 0, 71.53, -0.96, 112.97, -1.74, 147.73, -3.44, 20.35, 33, 54, 272 },
    // From Silene E78/E78B manual, available on Issoire Aviation website
   { _T("Silene E78"), 450, 0, 75, -0.548, 125, -1.267, 160, -2.439, 18, 47.222, 0, 365 },
+  { _T("Silent 2 electro"), 276, 0, 80.0, -0.650, 90.0, -0.650, 150.0, -1.550, 8.90, 41.67, 94, 205 }, // from LK8000
   { _T("Skylark 4"), 395, 0, 78, -0.637, 139, -2, 200, -5.092, 16.1, 0, 84, 258 },
   { _T("Std Austria S"), 297, 0, 70.0, -0.70, 118.0, -1.0, 145.0, -1.5, 13.5 , 38.9, 90, 205}, // From Schempp-Hirth sales handout, potentially too good
   { _T("Std Cirrus"), 337, 80, 93.23, -0.74, 149.17, -1.71, 205.1, -4.2, 10.04, 0.0, 99, 215 },
   { _T("Stemme S-10"), 850, 0, 133.47, -0.83, 167.75, -1.41, 205.03, -2.3, 18.70, 0.0, 110, 645 },
+  { _T("Stemme S-12"), 820, 0, 105.1, -0.550, 152.6, -1.050, 200.0, -2.030, 19.95, 50.0, 114, 400 }, // from CondorUtil (condorutill.fr)
+  { _T("Swift S-1"), 350, 0, 117.9, -1.100, 159.0, -1.770, 200.0, -3.000, 11.73, 65.56, 77, 280 }, // from CondorUtil (condorutill.fr)
   { _T("SZD-9 bis 1E Bocian"), 540, 0, 70, -0.83, 90, -1.00, 140, -2.53, 20, 0.0, 76, 330 },
   { _T("SZD-30 Pirat"), 370, 0, 80, -0.72, 100, -0.98, 150, -2.46, 13.8, 0.0, 86, 260 },
   { _T("SZD-36 Cobra"), 350, 30, 70.8, -0.60, 94.5, -0.69, 148.1, -1.83, 11.6, 0.0, 98, 275 },
+  { _T("SZD-38A Jantar 1"), 372, 90, 90.0, -0.530, 130.0, -1.070, 170.0, -2.000, 13.38, 44.44, 112, 325 }, // from LK8000
   { _T("SZD-42 Jantar 2b"), 482, 191, 109.5, -0.66, 157.14, -1.47, 196.42, -2.7, 14.27, 0.0, 113, 362 },
   { _T("SZD-48-2 Jantar Std 2"), 375, 150, 100, -0.73, 120, -0.95, 150, -1.60, 10.66, 0.0, 100, 274 },
   { _T("SZD-48-3 Jantar Std 3"), 326, 150, 95, -0.66, 180, -2.24, 220, -3.85, 10.66, 0.0, 100, 274 },
@@ -219,6 +247,7 @@ static constexpr Item internal_polars[] = {
   { _T("SZD-54-2 Perkoz (WL 17m)") /* winglet */,      442, 0, 99, -0.86, 175, -4.22, 250, -13.01, 16.36, 47.05, 98, 375 },
   { _T("SZD-54-2 Perkoz (WL 20m)") /* long winglet */, 442, 0, 91, -0.69, 170, -3.98, 250, -12.66, 17.30, 47.05, 102, 380 },
   { _T("SZD-55-1 Promyk"), 350, 200, 100.0, -0.66, 120, -0.86, 150, -1.4, 9.60, 0.0, 106, 215 },
+  { _T("SZD-55-2 Diana 2"), 270, 250, 100.5, -0.557, 146.3, -1.147, 185.6, -2.146, 8.64, 55.0, 116, 280 }, // from LK8000
   { _T("Taurus"), 472, 0, 100, -0.71, 120, -0.83, 150, -1.35, 12.26, 0.0, 99, 306 },
   { _T("Ventus a/b (16.6m)"), 358, 151, 100.17, -0.64, 159.69, -1.47, 239.54, -4.3, 9.96, 55.555, 113, 250 },
   { _T("Ventus b (15m)"), 341, 151, 97.69, -0.68, 156.3, -1.46, 234.45, -3.9, 9.51, 55.555, 110, 240 },
@@ -227,6 +256,8 @@ static constexpr Item internal_polars[] = {
   { _T("Ventus 2cT (18m)"), 410, 110, 100.0, -0.62, 150.0, -1.2, 200.0, -2.3, 11.03, 55.555, 120, 305 },
   { _T("Ventus 2cx (18m)"), 385, 215, 80.0, -0.5, 120.0, -0.73, 180.0, -2.0, 11.03, 55.555, 120, 265 },
   { _T("Ventus 2cxT (18m)"), 470, 130, 100.0, -0.56, 150.0, -1.13, 200.0, -2.28, 11.03, 55.555, 120, 310 },
+  { _T("Ventus 3 (15m)"), 370, 156, 110.5, -0.620, 155.3, -1.130, 200.0, -2.180, 9.53, 55.6, 116, 290 }, // from CondorUtil (condorutill.fr)
+  { _T("Ventus 3 (18m)"), 390, 186, 101.6, -0.520, 150.8, -1.080, 200.0, -2.250, 10.84, 55.6, 122, 300 }, // from CondorUtil (condorutill.fr)
   // from LK8000
   { _T("VSO-10 Gradient"), 347, 0, 90, -0.78, 130, -1.41, 160, -2.44, 12.0, 44.444, 96, 250 },
   { _T("VT-116 Orlik II"), 335, 0, 80, -0.7, 100, -1.05, 120, -1.65, 12.8, 33.333, 86, 215 },
@@ -234,6 +265,7 @@ static constexpr Item internal_polars[] = {
   // flight manual http://www.issoire-aviation.fr/doc_avia_gen/MdV_WA26P_R2.pdf
   // Contest handicap reference: http://docplayer.fr/79733029-Handicaps-planeurs-ffvv.html
   { _T("WA 26 P Squale"),  330, 0, 80, -0.61, 152, -2, 174, -3.0, 12.6, 0.0, 86, 228 },
+  { _T("Zugvogel IV"), 300, 0, 70.0, -0.700, 75.0, -0.740, 135.0, -1.930, 13.43, 38.89, 86, 242 }, // from Gliding Australia Polar10.xls (via Wayback Machine)
   { _T("Zuni II"), 358, 182, 110, -0.88, 167, -2.21, 203.72, -3.6, 10.13, 0.0, 0, 238 },
 };
 
